# Blueprint

./: AGENTS.md  Blueprint.code-workspace  Makefile  README.md  pyproject.toml  requirements.txt
Internal/: AGENTS_GUIDE.md  CICD_AND_MAKEFILE.md  LLM_API_WRAPPER.md  LLM_CONFIG.md  LLM_FILE_ACCESS.md  LLM_ORCHESTRATOR.md  LLM_USAGE_TRACKING.md  PHASE_2_LLM_WRAPPERS.md  PHASE_3_ORCHESTRATION.md  PHASE_5_STATIC_MODE.md  PHASE_7_DOCUMENTATION.md  README.md  TEXTUAL_LAYOUT_STYLING.md  TUI_DESIGN_SPEC.md  WRAPPERS-CLI-INFO.md
Internal/_Old/: PHASE_1_FOUNDATION.md  PHASE_4_INTERACTIVE_MODE.md  PHASE_6_UTILITIES.md  PHASE_8_PACKAGING.md  README.md  TUI_DESIGN_SPEC.md
Internal/roadmap/: LLM_CONFIG.md
Internal/services/: claude_api.md  gemini_api.md  ollama.md  openai_chat_api.md
Internal/services/briefs/: api_wrapper.md  file_access.md  llm_usage.md  orchestrator.md
src/blueprint/: __init__.py  __main__.py  cli.py  config.py  console_chat.py
src/blueprint/interactive/: __init__.py  app.py  commands.py  prompt_history.py
src/blueprint/models/: __init__.py  base.py  cache.py  claude.py  client.py  codex.py  credentials.py  deepseek.py  gemini.py  router.py  streaming.py  tool_engine.py
src/blueprint/orchestrator/: __init__.py  context.py  executor.py  orchestrator.py  persona.py  pipeline.py  streaming.py  supervisor.py  task.py
src/blueprint/state/: __init__.py  feature.py  persistence.py  tasks.py
src/blueprint/utils/: __init__.py  logger.py  usage_tracker.py
tests/: test_feature_conversation.py  test_orchestrator_context.py  test_prompt_history.py
(+11 files in other folders)
